--- a/app/views/replies/new.html.erb
+++ b/app/views/replies/new.html.erb
@@ -1,3 +1,2 @@
-<strong>Reply</strong>
 <%= render 'form', locals: {booking: @booking} %>
-<%= link_to 'Back', listing_bookings_path(@current_scope) %>
+<%= link_to 'Back', bookings_path(@current_scope) %>
