--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,35 +1,30 @@
-<h1>Listing bookings</h1>
+<center>
+  <h1>My Scenius Bookings</h1>
+</center>
 
-<table>
-  <thead>
-    <tr>
-      <th>Sender</th>
-      <th>Listing</th>
-      <th>Note</th>
-      <th>Start date</th>
-      <th>End date</th>
-      <th>Accepted</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @bookings.each do |booking| %>
-      <tr>
-        <td><%= booking.sender.username %></td>
-        <td><%= booking.listing_id %></td>
-        <td><%= booking.note %></td>
-        <td><%= booking.start_date %></td>
-        <td><%= booking.end_date %></td>
-        <td><%= booking.accepted_at %></td>
-        <td><%= link_to 'Show', booking %></td>
-        <td><%= link_to 'Edit', edit_booking_path(booking) %></td>
-        <td><%= link_to 'Destroy', booking, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+<div class="row">
+  <div class="col-sm-10 col-sm-offset-1">
+    <div class="list-group">
+      <% @bookings.each do |booking| %>
+        <a href="<%= booking_url(booking) %>" class="list-group-item">
+          <h4 class="list-group-item-heading">
+            <span class="label label-<%= booking.bootstrap_state %>">
+              <%= booking.state.capitalize %>
+            </span>
+            &nbsp;
+            <%= image_tag booking.other_party(current_user).fetch_avatar, :class => "img-circle", :style => "width: 40px;" %>
+            <%= booking.other_party(current_user).name %>
+            <small>
+              <b>
+                <%= booking.listing.name %>
+              </b>
+              <%= "(" + booking.start_date.to_formatted_s(:long_ordinal) + raw(' – ') + booking.end_date.to_formatted_s(:long_ordinal) + ")" %>
+              &nbsp;
+              <b>More<span class="glyphicon glyphicon-chevron-right"></span></b>
+            </small>
+          </h4>
+        </a>
+      <% end %>
+    </div>
+  </div>
+</div>
