--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -24,12 +24,27 @@
 						<div class="form-group"><%=f.label :name %>
 						<%= f.text_field :name, :class => "form-control" %></div>
 
+
 						<div class="form-group"><%= f.label :category %>
 						<%= f.select :category, options_for_select(Listing.categories.map {|value| [value, value] }),{}, :class => "form-control" %></div>
 
+
 						<div class="form-group">
-						<%=f.label :rate %><br>
-						<%= f.number_field :rate, :class => "form-control" %></div>
+							<label>Rental Rate (Per Day)</label>
+							<div class="input-group input-group-lg">
+							<span class="input-group-addon">$</span>
+							<%= f.number_field :rate, :placeholder => "20", in: 1..100, :class => "form-control text-center" %>
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label>Damage Deposit Amount (Optional)</label>
+							<div class="input-group input-group-lg">
+							<span class="input-group-addon">$</span>
+							<%= f.number_field :rate, :placeholder => "0", in: 1..1000, :class => "form-control text-center" %>
+							</div>
+						</div>
+
 
 						<div class="form-field"><%=f.label :description %><br>
 						<%= f.text_area :description, :class => "form-control no-resize" %></div>
