--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,5 +1,6 @@
+<%= "#{ENV['BALANCED_SECRET']}" %>
 <p id="notice"><%= notice %></p>
-<div class="row">
+<div class="row">XX
   <div class="col-sm-10 col-sm-offset-1">
     <div class="panel panel-default">
       <div class="panel-heading">
