--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -29,9 +29,9 @@
       </h1>
 
 
-      <% if @listings.length == 0 %>
+    <% if @listings.length == 0 %>
       <div class="panel panel-default">
-        <h4>You haven't created any listings yet.</h4>
+        <h4>No gear found =(</h4>
       </div>
     <% end %>
     </center>
