--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -1,25 +1,28 @@
-$scenius-green: rgb(40, 197, 97);
+$scenius-green: #11B24B;
 $scenius-alt-green: #1D9C4B;
-$scenius-off-white: rgb(240, 250, 244);
+$scenius-off-white: rgb(240, 240, 240);
 
 
 .body-wrapper {
 	height: 100%;
 	width: 100%;
-	padding-top: 50px;
+	padding-top: 80px;
 }
 
 .navbar-brand {
 	font-family: 'Ubuntu', sans-serif;
-	color: $scenius-green;
+	color: $scenius-off-white;
 	font-size: 50px;
 	font-style: 500;
 }
 
 .navbar {
-	background-color: $scenius-off-white;
+	background-color: $scenius-green;
 	padding: 10px 0px;
 	box-shadow: 0px 2px 2px rgba(0,0,0,1);
+  a {
+    color: $scenius-off-white;
+  }
 }
 
 a:hover{
@@ -35,8 +38,12 @@ body {
 }
 
 .home-search{
+  text-align: center;
+  position: absolute;
 	margin: auto;
-	margin-top: 20%;
+	top: 50%;
+  width: 100%;
+  margin-top: -100px;
 	color: $scenius-off-white;
 }
 
@@ -91,4 +98,22 @@ body {
 
 .no-resize{
 	resize: none;
+}
+
+.icon-bar {
+  border: 2px $scenius-green solid;
+}
+
+.footer {
+  text-align: center;
+  p {
+    margin-top: 40px;
+  }
+  a {
+    color: #2C2C2C;
+  }
+}
+
+body {
+  background-color: #f0f0f0;
 }
