--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -5,25 +5,31 @@
 <div class="row">
   <div class="col-sm-10 col-sm-offset-1">
     <div class="list-group">
-      <% @bookings.each do |booking| %>
-        <a href="<%= booking_url(booking) %>" class="list-group-item">
-          <h4 class="list-group-item-heading">
-            <span class="label label-<%= booking.bootstrap_state %>">
-              <%= booking.state.capitalize %>
-            </span>
-            &nbsp;
-            <%= image_tag booking.other_party(current_user).fetch_avatar, :class => "img-circle", :style => "width: 40px;" %>
-            <%= booking.other_party(current_user).name %>
-            <small>
-              <b>
-                <%= booking.listing.name %>
-              </b>
-              <%= "(" + booking.start_date.to_formatted_s(:long_ordinal) + raw(' – ') + booking.end_date.to_formatted_s(:long_ordinal) + ")" %>
+      <% if @bookings.any? %>
+        <% @bookings.each do |booking| %>
+          <a href="<%= booking_url(booking) %>" class="list-group-item">
+            <h4 class="list-group-item-heading">
+              <span class="label label-<%= booking.bootstrap_state %>">
+                <%= booking.state.capitalize %>
+              </span>
               &nbsp;
-              <b>More<span class="glyphicon glyphicon-chevron-right"></span></b>
-            </small>
-          </h4>
-        </a>
+              <%= image_tag booking.other_party(current_user).fetch_avatar, :class => "img-circle", :style => "width: 40px;" %>
+              <%= booking.other_party(current_user).name %>
+              <small>
+                <b>
+                  <%= booking.listing.name %>
+                </b>
+                <%= "(" + booking.start_date.to_formatted_s(:long_ordinal) + raw(' – ') + booking.end_date.to_formatted_s(:long_ordinal) + ")" %>
+                &nbsp;
+                <b>More<span class="glyphicon glyphicon-chevron-right"></span></b>
+              </small>
+            </h4>
+          </a>
+        <% end %>
+      <% else %>
+        <div class="panel panel-default">
+          <h4>No bookings yet.</h4>
+        </div>
       <% end %>
     </div>
   </div>
