--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<%= @total_unread_notifications = current_user.notifications.where(viewed: false).length if current_user %>
+<% @total_unread_notifications = current_user.notifications.where(viewed: false).length if current_user %>
 <div class="navbar navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Scenius IO</a>
+      <a class="navbar-brand" href="/">Scenius</a>
     </div>
     <div class="collapse navbar-collapse">
       <div class="pull-right">
