--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -23,7 +23,10 @@ $scenius-off-white: rgb(240, 240, 240);
   a {
     color: $scenius-off-white;
   }
-}
+  .nav > li > a:focus {
+    background-color: inherit;
+  };
+};
 
 a:hover{
 	color: $scenius-alt-green
@@ -37,6 +40,10 @@ body {
 	font-family: 'Lato', sans-serif;
 }
 
+.scenius-brand-font {
+  font-family: 'Ubuntu', sans-serif;
+}
+
 .home-search{
   text-align: center;
   position: absolute;
@@ -48,7 +55,7 @@ body {
 }
 
 .search-container{
-	width: 460px;
+	max-width: 460px;
 	margin: auto;
 }
 
@@ -136,7 +143,7 @@ body {
 }
 
 .icon-bar {
-  border: 2px $scenius-green solid;
+  border: 2px $scenius-off-white solid;
 }
 
 .footer {
