--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,5 +24,5 @@
 </div>
 <!-- Site Footer -->
 <footer class="footer">
-   <p>Built by <a href="https://github.com/nhayflick/">Nathan Hayflick.</a></p>
+   <p>Built by <a href="https://github.com/nhayflick/" target="_blank">Nathan Hayflick.</a></p>
 </footer>
