Show tagline on mobile

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,7 +18,7 @@
 		<% end %>
 	</div>
 	<!-- Bottom text container -->
-	<div class="splash-panel-3 hidden-xs">
+	<div class="splash-panel-3">
 		Peer-to-peer instrument rentals for musicians.
 	</div>
 </div>
